{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Move",
            "id": "29c868b9-2645-4de8-b04a-cd766050a15b",
            "actions": [
                {
                    "name": "MoveRight",
                    "type": "Value",
                    "id": "22f51666-98c3-48ed-b4e0-204158efa661",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "cbe16e5b-1dd6-43c5-bc79-b98bcb15a5ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "d5452b75-d116-4eb2-b7f1-16b0af5a503c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0c90418a-b126-4235-ba40-c32bb9a04c22",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ccc6370a-1339-4085-b089-065ce2176128",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c77dcac-ccae-496d-9f90-f54221e77ec6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}